fix: use HttpURLConnection for Java 8 compatibility