@@ -1,12 +1,13 @@
 package controller;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.Enumeration;
+import java.util.List;
+import java.util.Map;
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
@@ -19,7 +20,6 @@ import model.entities.GatewayRoute;
 public class GatewayServlet extends HttpServlet {
 
     private final RouteConfig routeConfig = new RouteConfig();
-    private final HttpClient httpClient = HttpClient.newHttpClient();
 
     private void setCorsHeaders(HttpServletResponse response) {
         response.setHeader("Access-Control-Allow-Origin", "*");
@@ -42,15 +42,16 @@ public class GatewayServlet extends HttpServlet {
         String pathInfo = request.getPathInfo();
         if (pathInfo == null || pathInfo.equals("/")) {
             response.setStatus(404);
+            response.setContentType("application/json;charset=UTF-8");
             response.getWriter().print("{\"error\":\"Endpoint not found\"}");
             return;
         }
 
         // Parse pathInfo to extract routing key and remaining sub-path
-        // e.g., "/clients/register" -> parts = ["", "clients", "register"]
         String[] parts = pathInfo.split("/", 3);
         if (parts.length < 2) {
             response.setStatus(404);
+            response.setContentType("application/json;charset=UTF-8");
             response.getWriter().print("{\"error\":\"Invalid routing key\"}");
             return;
         }
@@ -61,6 +62,7 @@ public class GatewayServlet extends HttpServlet {
         GatewayRoute targetRoute = routeConfig.lookup(routeKey);
         if (targetRoute == null) {
             response.setStatus(404);
+            response.setContentType("application/json;charset=UTF-8");
             response.getWriter().print("{\"error\":\"No route registered for: " + routeKey + "\"}");
             return;
         }
@@ -71,52 +73,78 @@ public class GatewayServlet extends HttpServlet {
             targetUrl += "?" + request.getQueryString();
         }
 
+        HttpURLConnection conn = null;
         try {
-            HttpRequest.Builder proxyReqBuilder = HttpRequest.newBuilder()
-                    .uri(URI.create(targetUrl));
-
-            if ("GET".equalsIgnoreCase(request.getMethod())) {
-                proxyReqBuilder.GET();
-            } else if ("POST".equalsIgnoreCase(request.getMethod())) {
-                StringBuilder buffer = new StringBuilder();
-                String line;
-                try (BufferedReader reader = request.getReader()) {
-                    while ((line = reader.readLine()) != null) {
-                        buffer.append(line);
-                    }
+            URL url = new URL(targetUrl);
+            conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod(request.getMethod());
+            
+            // Forward request headers from client to backend
+            Enumeration<String> headerNames = request.getHeaderNames();
+            while (headerNames.hasMoreElements()) {
+                String headerName = headerNames.nextElement();
+                if (!headerName.equalsIgnoreCase("host")) {
+                    conn.setRequestProperty(headerName, request.getHeader(headerName));
                 }
-                proxyReqBuilder.POST(HttpRequest.BodyPublishers.ofString(buffer.toString()))
-                        .header("Content-Type", "application/json");
-            } else if ("PUT".equalsIgnoreCase(request.getMethod())) {
-                StringBuilder buffer = new StringBuilder();
-                String line;
-                try (BufferedReader reader = request.getReader()) {
-                    while ((line = reader.readLine()) != null) {
-                        buffer.append(line);
-                    }
-                }
-                proxyReqBuilder.PUT(HttpRequest.BodyPublishers.ofString(buffer.toString()))
-                        .header("Content-Type", "application/json");
-            } else if ("DELETE".equalsIgnoreCase(request.getMethod())) {
-                proxyReqBuilder.DELETE();
             }
 
-            // Execute request
-            HttpResponse<String> proxyResponse = httpClient.send(
-                    proxyReqBuilder.build(),
-                    HttpResponse.BodyHandlers.ofString()
-            );
+            // Forward request body if method is POST, PUT, or DELETE
+            String method = request.getMethod();
+            if ("POST".equalsIgnoreCase(method) || "PUT".equalsIgnoreCase(method) || "DELETE".equalsIgnoreCase(method)) {
+                conn.setDoOutput(true);
+                try (InputStream is = request.getInputStream();
+                     OutputStream os = conn.getOutputStream()) {
+                    byte[] buffer = new byte[4096];
+                    int bytesRead;
+                    while ((bytesRead = is.read(buffer)) != -1) {
+                        os.write(buffer, 0, bytesRead);
+                    }
+                }
+            }
 
-            // Write response back to client
-            response.setStatus(proxyResponse.statusCode());
-            response.setContentType("application/json;charset=UTF-8");
-            PrintWriter out = response.getWriter();
-            out.print(proxyResponse.body());
+            // Read response code from backend
+            int responseCode = conn.getResponseCode();
+            response.setStatus(responseCode);
+
+            // Forward response headers back to client (skip CORS headers since we set them manually)
+            for (Map.Entry<String, List<String>> entry : conn.getHeaderFields().entrySet()) {
+                String key = entry.getKey();
+                if (key != null && !key.equalsIgnoreCase("transfer-encoding") &&
+                    !key.equalsIgnoreCase("access-control-allow-origin") &&
+                    !key.equalsIgnoreCase("access-control-allow-credentials")) {
+                    for (String value : entry.getValue()) {
+                        response.addHeader(key, value);
+                    }
+                }
+            }
+
+            // Forward response body back to client
+            InputStream is = null;
+            try {
+                is = conn.getInputStream();
+            } catch (IOException e) {
+                is = conn.getErrorStream();
+            }
+
+            if (is != null) {
+                response.setContentType("application/json;charset=UTF-8");
+                try (OutputStream os = response.getOutputStream()) {
+                    byte[] buffer = new byte[4096];
+                    int bytesRead;
+                    while ((bytesRead = is.read(buffer)) != -1) {
+                        os.write(buffer, 0, bytesRead);
+                    }
+                }
+            }
 
         } catch (Exception ex) {
             response.setStatus(500);
             response.setContentType("application/json;charset=UTF-8");
             response.getWriter().print("{\"error\":\"Gateway routing error: " + ex.getMessage() + "\"}");
+        } finally {
+            if (conn != null) {
+                conn.disconnect();
+            }
         }
     }
 }
